--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row align-items-center g-4">
         <div class="col-12 col-md-4 text-center">
           <!-- avatar.jpg -->
-          <img class="avatar" src="https://placehold.co/320x320/png?text=Your+Photo" alt="Portrait of Jan Michael Villanueva" />
+          <img class="avatar" src="assets\img\profile.jpg" alt="Portrait of Jan Michael Villanueva" />
         </div>
         <div class="col-12 col-md-8">
           <span class="tag mb-3">Cybersecurity • Frontend</span>
@@ -98,12 +98,12 @@
   <!-- EXPERIENCE -->
   <section id="experience" class="py-5">
     <div class="container">
-      <h2 class="section-title h1 mb-4">Experience</h2>
+      <h2 class="section-title h1 mb-4">Awards</h2>
       <div class="row g-4">
         <!-- thm -->
         <div class="col-md-6">
           <div class="card h-100">
-            <img src="https://placehold.co/800x320/png?text=Hackinfinity+%28Upload+Your+Image%29" class="card-img-top" alt="Hackinfinity badge placeholder">
+            <img src="assets\img\hackinfinigtythm.png" class="card-img-top" alt="Hackinfinity badge placeholder">
             <div class="card-body">
               <h5 class="card-title mb-1">Hackinfinity — TryHackMe</h5>
               <p class="text-white-50 small mb-2">Top 500+ Participant</p>
@@ -114,10 +114,10 @@
         <!-- htb -->
         <div class="col-md-6">
           <div class="card h-100">
-            <img src="https://placehold.co/800x320/png?text=Tales+of+Eloria+%28Upload+Your+Image%29" class="card-img-top" alt="HTB Tales of Eloria placeholder">
+            <img src="assets/img/cyberapoctfhtb.png" class="card-img-top" alt="HTB Tales of Eloria placeholder">
             <div class="card-body">
               <h5 class="card-title mb-1">Hack The Box — Tales of Eloria</h5>
-              <p class="text-white-50 small mb-2">Top 1020</p>
+              <p class="text-white-50 small mb-2">Top 1720</p>
               <p class="card-text">Competed in HTB's Tales of Eloria CTF, placing within the top 1020. Strengthened skills in web exploitation, reversing, and forensics under time pressure.</p>
             </div>
           </div>
@@ -125,20 +125,20 @@
         <!-- HTB Subscriber / THM Student -->
         <div class="col-md-6">
           <div class="card h-100">
-            <img src="https://placehold.co/800x320/png?text=Hack+The+Box+Subscription" class="card-img-top" alt="Hack The Box subscription placeholder">
+            <img src="assets\img\htbprofile.png" class="card-img-top" alt="Hack The Box subscription placeholder">
             <div class="card-body">
               <h5 class="card-title mb-1">Hack The Box</h5>
-              <p class="text-white-50 small mb-2">Subscriber</p>
+              <p class="text-white-50 small mb-2">Student | Subscriber</p>
               <p class="card-text">Active subscriber exploring labs and tracks to continually sharpen offensive and defensive security techniques.</p>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card h-100">
-            <img src="https://placehold.co/800x320/png?text=TryHackMe+Student" class="card-img-top" alt="TryHackMe student placeholder">
+            <img src="assets\img\thmprofile.png" class="card-img-top" alt="TryHackMe student placeholder">
             <div class="card-body">
               <h5 class="card-title mb-1">TryHackMe</h5>
-              <p class="text-white-50 small mb-2">Student</p>
+              <p class="text-white-50 small mb-2">Student | Subscriber</p>
               <p class="card-text">Learning paths covering fundamentals, SOC skills, and real-world attack chains through guided and challenge-based rooms.</p>
             </div>
           </div>
@@ -157,8 +157,8 @@
           <div class="card project-card h-100">
             <img src="https://placehold.co/1200x600/png?text=IT+Project" class="card-img-top" alt="IT Project placeholder" />
             <div class="card-body">
-              <h5 class="card-title">IT Project</h5>
-              <p class="card-text">Capstone and coursework artifacts focusing on systems design, security, and usable interfaces. (Add repository or demo links here.)</p>
+              <h5 class="card-title">IT Project - NaviBot: Chatbot for Enrollment (SAMCIS)</h5>
+              <p class="card-text">NLP-powered assistant that answers enrollment FAQs for SAMCIS students. Built with Python/Flask and integrated knowledge sources.</p>
               <a class="btn btn-outline-light btn-sm" href="#" target="_blank" rel="noopener">View Repo</a>
             </div>
           </div>
@@ -168,8 +168,8 @@
           <div class="card project-card h-100">
             <img src="https://placehold.co/1200x600/png?text=NaviBot+%E2%80%94+Enrollment+Chatbot" class="card-img-top" alt="NaviBot project placeholder" />
             <div class="card-body">
-              <h5 class="card-title">NaviBot — Chatbot for Enrollment (SAMCIS)</h5>
-              <p class="card-text">NLP-powered assistant that answers enrollment FAQs for SAMCIS students. Built with Python/Flask and integrated knowledge sources. (Add live demo/docs.)</p>
+              <h5 class="card-title">AgLugan</h5>
+              <p class="card-text">Built the front-end interface for a student hailing and queueing system using HTML, CSS, Bootstrap, and JavaScript. </p>
               <a class="btn btn-outline-light btn-sm" href="#" target="_blank" rel="noopener">Project Docs</a>
             </div>
           </div>
