--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- IT Project placeholder -->
         <div class="col-md-6">
           <div class="card project-card h-100">
-            <img src="https://placehold.co/1200x600/png?text=IT+Project" class="card-img-top" alt="IT Project placeholder" />
+            <img src="assets/img/navibot.png" class="card-img-top" alt="IT Project placeholder" />
             <div class="card-body">
               <h5 class="card-title">IT Project - NaviBot: Chatbot for Enrollment (SAMCIS)</h5>
               <p class="card-text">NLP-powered assistant that answers enrollment FAQs for SAMCIS students. Built with Python/Flask and integrated knowledge sources.</p>
@@ -166,7 +166,7 @@
         <!-- NaviBot -->
         <div class="col-md-6">
           <div class="card project-card h-100">
-            <img src="https://placehold.co/1200x600/png?text=NaviBot+%E2%80%94+Enrollment+Chatbot" class="card-img-top" alt="NaviBot project placeholder" />
+            <img src="assets/img/aglugan.png" class="card-img-top" alt="NaviBot project placeholder" />
             <div class="card-body">
               <h5 class="card-title">AgLugan</h5>
               <p class="card-text">Built the front-end interface for a student hailing and queueing system using HTML, CSS, Bootstrap, and JavaScript. </p>
